--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lime-search",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:4040/",
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
     "@testing-library/jest-dom": "^5.16.5",
